--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -6,6 +6,8 @@
     <title>Veternaria - Contactos</title>
     <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
 </head>
 
@@ -68,21 +70,41 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
-            <footer class="fin">
-                <img class="logoFin" src="../assets/imagenes/logo.jpg">
-                <ul class="listaFin">
-                    <li class="liFooter"><a class="aFin" href="../index.html">Inicio</a></li>
-                    <li class="liFooter"><a class="aFin" href="./nosotros.html">Nosotros</a></li>
-                    <li class="liFooter"><a class="aFin" href="./servicios.html">Servicios</a></li>
-                    <li class="liFooter"><a class="aFin" href="./galeria.html">Galeria</a></li>
-                    <li class="liFooter"><a class="aFin" href="./contactos.html">Contactos</a></li>
-                </ul>
-                <div class="info">
-                    <p class="pFooter">(0221)xxx-xxxx </p>
-                    <p class="pFooter">VeterinariaCityBell@gmail.com</p>
-                    <p class="pFooter">City Bell-La Plata, Buenos Aires, Argentina</p>
-                </div>
-            </footer>
-
         </section>
     </main>
+    
+    <div class="pag-num-contacto">
+        <nav aria-label="...">
+            <ul class="pagination pagination-sm justify-content-center  ">
+                <li class="page-item"><a class="page-link" href="../index.html">1</a></li>
+                <li class="page-item"><a class="page-link" href="./nosotros.html">2</a></li>
+                <li class="page-item"><a class="page-link" href="./servicios.html">3</a></li>
+                <li class="page-item"><a class="page-link" href="./galeria.html">4</a></li>
+                <li class="page-item active" aria-current="page">
+                    <span class="page-link">5</span>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+    <footer class="fin">
+        <img class="logoFin" src="../assets/imagenes/logo.jpg">
+        <ul class="listaFin">
+            <li class="liFooter"><a class="aFin" href="../index.html">Inicio</a></li>
+            <li class="liFooter"><a class="aFin" href="./nosotros.html">Nosotros</a></li>
+            <li class="liFooter"><a class="aFin" href="./servicios.html">Servicios</a></li>
+            <li class="liFooter"><a class="aFin" href="./galeria.html">Galeria</a></li>
+            <li class="liFooter"><a class="aFin" href="./contactos.html">Contactos</a></li>
+        </ul>
+        <div class="info">
+            <p class="pFooter">(0221)xxx-xxxx </p>
+            <p class="pFooter">VeterinariaCityBell@gmail.com</p>
+            <p class="pFooter">City Bell-La Plata, Buenos Aires, Argentina</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
+
+</body>
+</html>
