--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Veterinaria City Bell</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -38,7 +40,22 @@
                     <h2 class="mensaje">Atendemos emergencias las 24h</h2>
                 </div>
             </section>
+            <div>
+                <nav aria-label="...">
+                    <ul class="pagination pagination-sm justify-content-center  ">
+                        <li class="page-item active" aria-current="page">
+                            <span class="page-link">1</span>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="./pages/nosotros.html">2</a></li>
+                        <li class="page-item"><a class="page-link" href="./pages/servicios.html">3</a></li>
+                        <li class="page-item"><a class="page-link" href="./pages/galeria.html">4</a></li>
+                        <li class="page-item"><a class="page-link" href="./pages/contactos.html">5</a></li>
+                    </ul>
+                </nav>
+            </div>
         </main>
+
+
         <footer class="fin">
             <img class="logoFin" src="./assets/imagenes/logo.jpg">
             <ul class="listaFin">
@@ -55,6 +72,9 @@
             </div>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
