--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/ab15aef633.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
 <body>
@@ -153,6 +155,20 @@
         </article>
     </main>
 
+    <div class="pag-num-galeria">
+        <nav aria-label="...">
+            <ul class="pagination pagination-sm justify-content-center  ">
+                <li class="page-item"><a class="page-link" href="../index.html">1</a></li>
+                <li class="page-item"><a class="page-link" href="./nosotros.html">2</a></li>
+                <li class="page-item"><a class="page-link" href="./servicios.html">3</a></li>
+                <li class="page-item active" aria-current="page">
+                    <span class="page-link">4</span>
+                </li>
+                <li class="page-item"><a class="page-link" href="./contactos.html">5</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <footer class="fin">
         <a href="../index.html"><img class="logoFin" src="../assets/imagenes/logo.jpg"></a>
         <ul class="listaFin">
@@ -169,7 +185,10 @@
             <p class="pFooter">City Bell-La Plata, Buenos Aires, Argentina</p>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
+    
 </body>
 
 </html>
