--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
 </head>
 
@@ -33,18 +35,86 @@
                     <p class="informacion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam accusantium
                         adipisci veritatis totam hic iure fugiat sed. Adipisci ea iusto eius minima voluptates
                         ipsum,dicta mollitia ipsa placeat, vero unde.Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Reiciendis deleniti veritatis ut eum ullam nostrum error quisquam quod non quia labore omnis ducimus ea
-                        atLorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis deleniti veritatis ut eum ullam nostrum error quisquam quod non quia labore omnis ducimus ea
-                        atLorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis deleniti veritatis ut eum ullam nostrum error quisquam quod non quia labore omnis ducimus ea
-                        atLorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis deleniti veritatis ut eum ullam nostrum error quisquam quod non quia labore omnis ducimus ea
-                        atLorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis deleniti veritatis ut eum ullam nostrum error quisquam quod non quia labore omnis ducimus ea
+                        elit. Reiciendis deleniti veritatis ut eum ullam nostrum error quisquam quod non quia labore
+                        omnis ducimus ea
+                        atLorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis deleniti veritatis ut eum
+                        ullam nostrum error quisquam quod non quia labore omnis ducimus ea
+                        atLorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis deleniti veritatis ut eum
+                        ullam nostrum error quisquam quod non quia labore omnis ducimus ea
+                        atLorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis deleniti veritatis ut eum
+                        ullam nostrum error quisquam quod non quia labore omnis ducimus ea
+                        atLorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis deleniti veritatis ut eum
+                        ullam nostrum error quisquam quod non quia labore omnis ducimus ea
                         atLorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
                     </p>
                 </div>
             </div>
         </section>
+        <section class="nosotros-acordeon">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Nosotros #1
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet a sit
+                            temporibus assumenda est sint tenetur inventore iusto, repudiandae molestiae doloremque nam
+                            quo quisquam ipsam facere illo itaque aliquam numquam!.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Nosotros #2
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+                            voluptate tempore earum adipisci ullam delectus rerum saepe incidunt ab, vero molestiae
+                            accusamus placeat assumenda quo sunt porro rem expedita laborum..</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            Nosotros #3
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus, debitis repudiandae doloremque, commodi ipsa voluptate quidem pariatur
+                            corrupti animi nihil ea officiis aliquam praesentium delectus error vitae nisi. Aut,
+                            necessitatibus?.</div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
+
+    <div class="pag-num-nosotros">
+        <nav aria-label="...">
+            <ul class="pagination pagination-sm justify-content-center">
+                <li class="page-item"><a class="page-link" href="../index.html">1</a></li>
+                <li class="page-item active" aria-current="page">
+                    <span class="page-link">2</span>
+                </li>
+                <li class="page-item"><a class="page-link" href="./servicios.html">3</a></li>
+                <li class="page-item"><a class="page-link" href="./galeria.html">4</a></li>
+                <li class="page-item"><a class="page-link" href="./contactos.html">5</a></li>
+            </ul>
+        </nav>
+    </div>
+
 
 
     <footer class="fin">
@@ -62,6 +132,9 @@
             <p class="pFooter">City Bell-La Plata, Buenos Aires, Argentina</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
