--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 <img class="logo" src="./assets/imagenes/logo.jpg">
             </div>
             <nav class="navegador">
-                <ul>
+                <ul class="animate__animated animate__bounce">
                     <li class="lista-nav"><a class="enlace-nav" href="./pages/nosotros.html">Nosotros</a></li>
                     <li class="lista-nav"><a class="enlace-nav" href="./pages/servicios.html">Servicios</a></li>
                     <li class="lista-nav"><a class="enlace-nav" href="./pages/galeria.html">Galeria</a></li>
@@ -31,7 +31,7 @@
             <section>
                 <div class="cont-titulo">
                     <img class="imagenInicial" src="./assets/imagenes/imagen-1.jpg">
-                    <h1 class="titulo">Veterinaria City Bell</h1>
+                    <h1 class="animate__animated animate__fadeInLeft">Veterinaria City Bell</h1>
                 </div>
                 <div class="contenedor-calidad">
                     <h2 class="calidad">¡Calidad en todos nuestros servicios veterinarios Garantizado!</h2>
@@ -40,19 +40,6 @@
                     <h2 class="mensaje">Atendemos emergencias las 24h</h2>
                 </div>
             </section>
-            <div>
-                <nav aria-label="...">
-                    <ul class="pagination pagination-sm justify-content-center  ">
-                        <li class="page-item active" aria-current="page">
-                            <span class="page-link">1</span>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="./pages/nosotros.html">2</a></li>
-                        <li class="page-item"><a class="page-link" href="./pages/servicios.html">3</a></li>
-                        <li class="page-item"><a class="page-link" href="./pages/galeria.html">4</a></li>
-                        <li class="page-item"><a class="page-link" href="./pages/contactos.html">5</a></li>
-                    </ul>
-                </nav>
-            </div>
         </main>
 
 
