--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 </head>
 
 <body>
@@ -17,7 +19,7 @@
             <img class="logo" src="../assets/imagenes/logo.jpg">
         </div>
         <nav class="navegador">
-            <ul>
+            <ul class="animate__animated animate__bounce">
                 <li class="lista-nav"><a class="enlace-nav" href="../index.html">Inicio</a></li>
                 <li class="lista-nav"><a class="enlace-nav" href="./nosotros.html">Nosotros</a></li>
                 <li class="lista-nav"><a class="enlace-nav" href="./servicios.html">Servicios</a></li>
@@ -155,20 +157,6 @@
         </article>
     </main>
 
-    <div class="pag-num-galeria">
-        <nav aria-label="...">
-            <ul class="pagination pagination-sm justify-content-center  ">
-                <li class="page-item"><a class="page-link" href="../index.html">1</a></li>
-                <li class="page-item"><a class="page-link" href="./nosotros.html">2</a></li>
-                <li class="page-item"><a class="page-link" href="./servicios.html">3</a></li>
-                <li class="page-item active" aria-current="page">
-                    <span class="page-link">4</span>
-                </li>
-                <li class="page-item"><a class="page-link" href="./contactos.html">5</a></li>
-            </ul>
-        </nav>
-    </div>
-
     <footer class="fin">
         <a href="../index.html"><img class="logoFin" src="../assets/imagenes/logo.jpg"></a>
         <ul class="listaFin">
@@ -188,7 +176,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     </script>
-    
+
 </body>
 
 </html>
