--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/ab15aef633.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Martin Alvaro">
+    <meta name="keywords" content="veterinaria, city bell, perros, mascota, imagens, fotos">
+    <meta name="description" content="Veterinria de City Bell especializada en el bienestar tu mascota">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
