--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="body-contactos">
+<body>
     <header class="cabezera">
         <div class="contenedor-imagen-logo">
             <img class="logo" src="../assets/imagenes/logo.jpg">
@@ -61,9 +61,8 @@
             <div class="contenedor-conozcanos">
                 <div class="contenedor-mensaje-conozcanos">
                     <h2 class="mensaje-conozcanos">Conózcanos, estamos en:</h2>
-                    <br>
                     <p class="mensaje-conozcanos"><b>City Bell-La Plata, Buenos Aires, Argentina</b></p>
-                    <p class="mensaje-conozcanos">E-mail:<b>VeterinariaCityBell@gmail.com</b></p>
+                    <p class="mensaje-conozcanos">E-mail: <b>VeterinariaCityBell@gmail.com</b></p>
                     <p class="mensaje-conozcanos"><b>Teléfono:</b>(0221)XXX-XXXX</p>
                     <p class="mensaje-conozcanos"><b>Horario de atención:</b>Atendemos emergencias las 24h</p>
                 </div>
