teminimando el proyecto final

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 
 <body>
     <div class="container-grid">
+        <!-- cabezera -->
         <header class="cabezera">
+            <!-- logo -->
             <div class="contenedor-imagen-logo">
-                <img class="logo" src="./assets/imagenes/logo.jpg">
+                <img class="logo" src="./assets/imagenes/logo.jpg" alt="logo de la pagina-header">
             </div>
+            <!-- nav -->
             <nav class="navegador">
                 <ul class="animate__animated animate__bounce">
                     <li class="lista-nav"><a class="enlace-nav" href="./pages/nosotros.html">Nosotros</a></li>
@@ -30,10 +33,11 @@
             </nav>
         </header>
 
+        <!-- contenido -->
         <main class="contenido-inicio">
             <section>
                 <div class="cont-titulo">
-                    <img class="imagenInicial" src="./assets/imagenes/imagen-1.jpg">
+                    <img class="imagenInicial" src="./assets/imagenes/imagen-1.jpg" alt="imagen-bulldog">
                     <h1 class="animate__animated animate__fadeInLeft">Veterinaria City Bell</h1>
                 </div>
                 <div class="contenedor-calidad">
@@ -45,9 +49,11 @@
             </section>
         </main>
 
-
+        <!-- pie de pagina -->
         <footer class="fin">
-            <img class="logoFin" src="./assets/imagenes/logo.jpg">
+            <!-- logo -->
+            <img class="logoFin" src="./assets/imagenes/logo.jpg" alt="logo de la pagina-footer">
+            <!-- nav -->
             <ul class="listaFin">
                 <li class="liFooter"><a class="aFin" href="./index.html">Inicio</a></li>
                 <li class="liFooter"><a class="aFin" href="./pages/nosotros.html">Nosotros</a></li>
@@ -55,6 +61,7 @@
                 <li class="liFooter"><a class="aFin" href="./pages/galeria.html">Galeria</a></li>
                 <li class="liFooter"><a class="aFin" href="./pages/contactos.html">Contactos</a></li>
             </ul>
+            <!-- info -->
             <div class="info">
                 <p class="pFooter">(0221)xxx-xxxx </p>
                 <p class="pFooter">VeterinariaCityBell@gmail.com</p>
