--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -17,10 +17,13 @@
 </head>
 
 <body>
+    <!-- cabezera -->
     <header class="cabezera">
+        <!-- logo -->
         <div class="contenedor-imagen-logo">
-            <img class="logo" src="../assets/imagenes/logo.jpg">
+            <a href="../index.html"><img class="logo" src="../assets/imagenes/logo.jpg" alt="logo de la pagina-header"></a>
         </div>
+        <!-- nav -->
         <nav class="navegador">
             <ul class="animate__animated animate__bounce">
                 <li class="lista-nav"><a class="enlace-nav" href="../index.html">Inicio</a></li>
@@ -31,46 +34,47 @@
         </nav>
     </header>
 
+    <!-- contenido -->
     <main>
         <h1 id="galeria">Galeria</h1>
         <span class="linea"></span>
         <section class="distancia">
             <div class="galeria-fotos">
                 <a href="#image1">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-1.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-1.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image2">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-2.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-2.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image3">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-3.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-3.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image4">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-4.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-4.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image5">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-5.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-5.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image6">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-6.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-6.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image7">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-7.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-7.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image8">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-8.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-8.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image9">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-9.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-9.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image10">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-10.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-10.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image11">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-11.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-11.jpg" alt="imagen de la galeria">
                 </a>
                 <a href="#image12">
-                    <img class="imagen-galeria" src="../assets/imagenes/galeria-12.jpg">
+                    <img class="imagen-galeria" src="../assets/imagenes/galeria-12.jpg" alt="imagen de la galeria">
                 </a>
             </div>
         </section>
@@ -160,8 +164,11 @@
         </article>
     </main>
 
+    <!-- pie de pagina -->
     <footer class="fin">
-        <a href="../index.html"><img class="logoFin" src="../assets/imagenes/logo.jpg"></a>
+        <!-- logo -->
+        <a href="../index.html"><img class="logoFin" src="../assets/imagenes/logo.jpg" alt="logo de la pagina-footer"></a>
+        <!-- nav -->
         <ul class="listaFin">
             <li class="liFooter"><a class="aFin" href="../index.html">Inicio</a></li>
             <li class="liFooter"><a class="aFin" href="./nosotros.html">Nosotros</a></li>
@@ -170,6 +177,7 @@
             <li class="liFooter"><a class="aFin" href="./contactos.html">Contactos</a></li>
         </ul>
         </ul>
+        <!-- info -->
         <div class="info">
             <p class="pFooter">(0221)xxx-xxxx </p>
             <p class="pFooter">VeterinariaCityBell@gmail.com</p>
