--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,15 +10,19 @@
     <meta name="keywords" content="veterinaria, city bell, perros, mascota, calidad, servicios">
     <meta name="description" content="Veterinria de City Bell especializada en el bienestar tu mascota">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
+    <!-- cabezera -->
     <header class="cabezera">
+        <!-- logo -->
         <div class="contenedor-imagen-logo">
-            <img class="logo" src="../assets/imagenes/logo.jpg">
+            <a href="../index.html"><img class="logo" src="../assets/imagenes/logo.jpg"
+                    alt="logo de la pagina-header"></a>
         </div>
+        <!-- nav -->
         <nav class="navegador">
             <ul class="animate__animated animate__bounce">
                 <li class="lista-nav"><a class="enlace-nav" href="../index.html">Inicio</a></li>
@@ -29,55 +33,61 @@
         </nav>
     </header>
 
+
+    <!-- contenido -->
     <main>
         <section class="distancia">
             <div class="imagenDeFondo">
             </div>
-            <div class="grupo-de-servicios">
-                <img class="imagen-izquierda" src="../assets/imagenes/imagen-servicios.jpg">
-                <div class="contenedor-servicios">
-                    <h1 id="servicios">Servicios</h1>
-                    <div>
-                        <p id="especialidades">En nuestro centro estamos especializados en:</p>
-                        <table>
-                            <tr>
-                                <td>Oftalmología veterinaria</td>
-                                <td>Dermatología veterinaria</td>
-                            </tr>
-                            <tr class="color-tabla">
-                                <td>Oncología veterinaria</td>
-                                <td>Rayos X veterinaria</td>
-                            </tr>
-                            <tr>
-                                <td>Cirugía veterinaria</td>
-                                <td>Cardiología veterinaria</td>
-                            </tr>
-                            <tr class="color-tabla">
-                                <td>Endoscopía Veterinaria</td>
-                                <td>Anestesiología veterinaria</td>
-                            </tr>
-                            <tr>
-                                <td>Traumatología veterinaria</td>
-                                <td>Ortopedia veterinaria</td>
-                            </tr>
-                            <tr class="color-tabla">
-                                <td>Ecografías veterinaria</td>
-                                <td>Internación veterinaria</td>
-                            </tr>
-                            <tr>
-                                <td>Clínica veterinaria</td>
-                                <td>Homeopatía veterinaria</td>
-                            </tr>
-                        </table>
-                    </div>
+            <div class="contenedor-servicios">
+                <img class="imagen-perro" src="../assets/imagenes/imagen-servicios.jpg" alt="imagen bulldog">
+                <h1 id="servicios">Servicios</h1>
+                <p id="especialidades">En nuestro centro estamos especializados en:</p>
+                <div>
+                    <!-- tabla de servicios -->
+                    <table>
+                        <tr>
+                            <td>Oftalmología veterinaria</td>
+                            <td>Dermatología veterinaria</td>
+                        </tr>
+                        <tr class="color-tabla">
+                            <td>Oncología veterinaria</td>
+                            <td>Rayos X veterinaria</td>
+                        </tr>
+                        <tr>
+                            <td>Cirugía veterinaria</td>
+                            <td>Cardiología veterinaria</td>
+                        </tr>
+                        <tr class="color-tabla">
+                            <td>Endoscopía Veterinaria</td>
+                            <td>Anestesiología veterinaria</td>
+                        </tr>
+                        <tr>
+                            <td>Traumatología veterinaria</td>
+                            <td>Ortopedia veterinaria</td>
+                        </tr>
+                        <tr class="color-tabla">
+                            <td>Ecografías veterinaria</td>
+                            <td>Internación veterinaria</td>
+                        </tr>
+                        <tr>
+                            <td>Clínica veterinaria</td>
+                            <td>Homeopatía veterinaria</td>
+                        </tr>
+                    </table>
                 </div>
+            </div>
             </div>
         </section>
     </main>
-    
 
+
+    <!-- pie de pagina -->
     <footer class="fin">
-        <a href="../index.html"><img class="logoFin" src="../assets/imagenes/logo.jpg"></a>
+        <!-- logo -->
+        <a href="../index.html"><img class="logoFin" src="../assets/imagenes/logo.jpg"
+                alt="logo de la pagina-footer"></a>
+        <!-- nav -->
         <ul class="listaFin">
             <li class="liFooter"><a class="aFin" href="../index.html">Inicio</a></li>
             <li class="liFooter"><a class="aFin" href="./nosotros.html">Nosotros</a></li>
@@ -86,6 +96,7 @@
             <li class="liFooter"><a class="aFin" href="./contactos.html">Contactos</a></li>
         </ul>
         </ul>
+        <!-- info -->
         <div class="info">
             <p class="pFooter">(0221)xxx-xxxx </p>
             <p class="pFooter">VeterinariaCityBell@gmail.com</p>
@@ -93,8 +104,9 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-</script>
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 
 </body>
+
 </html>
