--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Martin Alvaro">
-    <meta name="keywords" content="veterinaria, city bell, perros, mascota, contacto, ubicacion, horario, zona, mapa, gmail, telefono">
+    <meta name="keywords"
+        content="veterinaria, city bell, perros, mascota, contacto, ubicacion, horario, zona, mapa, gmail, telefono">
     <meta name="description" content="Veterinria de City Bell especializada en el bienestar tu mascota">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -16,10 +17,13 @@
 </head>
 
 <body>
+    <!-- cabezera -->
     <header class="cabezera">
+        <!-- logo -->
         <div class="contenedor-imagen-logo">
-            <img class="logo" src="../assets/imagenes/logo.jpg">
+            <a href="../index.html"><img class="logo" src="../assets/imagenes/logo.jpg" alt="logo de la pagina-header"></a>
         </div>
+        <!-- nav -->
         <nav class="navegador">
             <ul class="animate__animated animate__bounce">
                 <li class="lista-nav"><a class="enlace-nav" href="../index.html">Inicio</a></li>
@@ -30,11 +34,13 @@
         </nav>
     </header>
 
+    <!-- contenido -->
     <main>
         <section class="distancia">
             <div>
                 <h1 id="contactos">Contactos</h1>
             </div>
+            <!-- formulario -->
             <div class="flex-conteiner">
                 <form class="form">
                     <div class="form__section">
@@ -54,10 +60,11 @@
                     </div>
                 </form>
                 <div class="form-img">
-                    <img src="../assets/imagenes/imagen-correo.jpg">
+                    <img src="../assets/imagenes/imagen-correo.jpg" alt="imagen del formulario"> 
                 </div>
             </div>
 
+            <!-- info de contactos -->
             <div class="contenedor-conozcanos">
                 <div class="contenedor-mensaje-conozcanos">
                     <h2 class="mensaje-conozcanos">Conózcanos, estamos en:</h2>
@@ -66,7 +73,9 @@
                     <p class="mensaje-conozcanos"><b>Teléfono:</b>(0221)XXX-XXXX</p>
                     <p class="mensaje-conozcanos"><b>Horario de atención:</b>Atendemos emergencias las 24h</p>
                 </div>
-                <div>
+                
+                <!-- mapa -->
+                <div class="map-responsive">
                     <iframe class="contenedor-iframe"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52361.12547558093!2d-58.101682042084214!3d-34.892134028606485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2de7dcfe08117%3A0x138071d3f8e9721e!2sCity%20Bell%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1652274149793!5m2!1ses!2sar"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -76,8 +85,11 @@
         </section>
     </main>
 
+    <!-- pie de pagina -->
     <footer class="fin">
-        <img class="logoFin" src="../assets/imagenes/logo.jpg">
+        <!-- logo -->
+        <a href="../index.html"><img class="logoFin" src="../assets/imagenes/logo.jpg" alt="logo de la pagina-footer"></a>
+        <!-- nav -->
         <ul class="listaFin">
             <li class="liFooter"><a class="aFin" href="../index.html">Inicio</a></li>
             <li class="liFooter"><a class="aFin" href="./nosotros.html">Nosotros</a></li>
@@ -85,6 +97,7 @@
             <li class="liFooter"><a class="aFin" href="./galeria.html">Galeria</a></li>
             <li class="liFooter"><a class="aFin" href="./contactos.html">Contactos</a></li>
         </ul>
+        <!-- info -->
         <div class="info">
             <p class="pFooter">(0221)xxx-xxxx </p>
             <p class="pFooter">VeterinariaCityBell@gmail.com</p>
@@ -96,4 +109,5 @@
     </script>
 
 </body>
+
 </html>
