--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,16 +11,20 @@
     <meta name="keywords" content="veterinaria, city bell, perros, mascota, nosotros">
     <meta name="description" content="Veterinria de City Bell especializada en el bienestar tu mascota">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
 <body>
+    <!-- cabezera -->
     <header class="cabezera">
+        <!-- logo -->
         <div class="contenedor-imagen-logo">
-            <img class="logo" src="../assets/imagenes/logo.jpg">
+            <a href="../index.html"><img class="logo" src="../assets/imagenes/logo.jpg"
+                    alt="logo de la pagina-header"></a>
         </div>
+        <!-- nav -->
         <nav class="navegador">
             <ul class="animate__animated animate__bounce">
                 <li class="lista-nav"><a class="enlace-nav" href="../index.html">Inicio</a></li>
@@ -30,11 +34,13 @@
             </ul>
         </nav>
     </header>
+
+    <!-- contenido -->
     <main>
         <section>
             <div class="contenedor-nosotros">
                 <h1 id="nosotros">Nosotros</h1>
-                <img class="imagen-nosotros" src="../assets/imagenes/equipo.jpg">
+                <img class="imagen-nosotros" src="../assets/imagenes/equipo.jpg" alt="imagen de nosotros">
                 <div class="contenedor-info">
                     <p class="informacion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam accusantium
                         adipisci veritatis totam hic iure fugiat sed. Adipisci ea iusto eius minima voluptates
@@ -106,8 +112,12 @@
     </main>
 
 
+    <!-- pie de pagina -->
     <footer class="fin">
-        <img class="logoFin" src="../assets/imagenes/logo.jpg">
+        <!-- logo -->
+        <a href="../index.html"><img class="logoFin" src="../assets/imagenes/logo.jpg"
+                alt="logo de la pagina-footer"></a>
+        <!-- nav -->
         <ul class="listaFin">
             <li class="liFooter"><a class="aFin" href="../index.html">Inicio</a></li>
             <li class="liFooter"><a class="aFin" href="./nosotros.html">Nosotros</a></li>
@@ -115,6 +125,7 @@
             <li class="liFooter"><a class="aFin" href="./galeria.html">Galeria</a></li>
             <li class="liFooter"><a class="aFin" href="./contactos.html">Contactos</a></li>
         </ul>
+        <!-- info -->
         <div class="info">
             <p class="pFooter">(0221)xxx-xxxx </p>
             <p class="pFooter">VeterinariaCityBell@gmail.com</p>
